--- a/app.json
+++ b/app.json
@@ -19,7 +19,8 @@
         "monochromeImage": "./assets/images/android-icon-monochrome.png"
       },
       "edgeToEdgeEnabled": true,
-      "predictiveBackGestureEnabled": false
+      "predictiveBackGestureEnabled": false,
+      "package": "com.theg1239.cc"
     },
     "web": {
       "output": "static",
@@ -40,6 +41,9 @@
         }
       ]
     ],
+    "extra": {
+      "API_URL": "${EXPO_PUBLIC_API_URL}"
+    },
     "experiments": {
       "typedRoutes": true,
       "reactCompiler": true
